# core-backend-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.local.yml  makefile  pyproject.toml
.github/workflows/: deploy.yml  release.yml
src/: manage.py
src/apps/core_api/: apis.py  models.py  routes.py  serializers.py
src/apps/core_api/clients/: openai_client.py
src/apps/core_api/migrations/: 0001_initial.py  0002_thread.py
src/core/: settings.py  urls.py
src/scripts/: openai_client.py  openai_example.ipynb
